tests/boxbreaker/examples/bad/bad-15-bad-directives.bbk
// Errors: malformed preprocessor directives.

// ----- PRE-DEFINE errors -----
PRE-DEFINE                            // missing macro name
PRE-DEFINE "STRING_AS_NAME"           // name must be IDENT, not STR_LIT
PRE-DEFINE 123                        // name must be IDENT, not literal

// ----- PRE-UNDEFINE errors -----
PRE-UNDEFINE                          // missing macro name
PRE-UNDEFINE "STRING"                 // must be IDENT

// ----- PRE-INCLUDE errors -----
PRE-INCLUDE                           // missing file argument
PRE-INCLUDE 42                        // must be STR_LIT or IDENT

// ----- PRE-IF errors -----
PRE-IF                                // missing condition expression
PRE-IF DEFINED(                       // unterminated condition
PRE-ELSEIF                            // missing condition expression

// ----- Standalone directives that should be fine even if orphan -----
// (semantic check would flag orphan ELSE/ENDIF, but parser accepts them)
PRE-ELSE
PRE-ENDIF
PRE-EOF

// ----- Mixed in declarations -----
PRE-DEFINE VALID_NAME
DCL-S good INT(10);                   // OK

PRE-IF DEFINED(DEBUG)
DCL-S debugOnly INT(10);
PRE-ENDIF

DCL-PROC procWithDirectives {
  DCL-S x INT(10);

  PRE-IF DEFINED(VERBOSE)
    print("verbose output");
  PRE-ELSE
    print("normal");
  PRE-ENDIF

  // Bad ones inside procedure too:
  PRE-DEFINE                          // missing name (inside body)
  PRE-IF                              // missing condition (inside body)
}
